--- a/client/src/css/QuestionPage.module.css
+++ b/client/src/css/QuestionPage.module.css
@@ -10,6 +10,23 @@
     padding: 0px 30px 10px;
 }
 
-.comment {
-    
+.textarea {
+    background: #1F1F1F;
+    resize: none;
+    width: 100%;
+    border: none;
+}
+
+.textarea_wrapper {
+    border: #747474 2px solid;
+    border-radius: 15px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 22px;
+    box-sizing: border-box;
+    margin: 37px 0;
+}
+
+.wrapper button {
+    margin-left: 90%;
 }
