--- a/client/src/css/HomePage.module.css
+++ b/client/src/css/HomePage.module.css
@@ -1,4 +1,12 @@
 .home_page_wrapper {
     background: #1F1F1F;
-    ;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 3em auto;
+}
+
+.break {
+    flex-basis: 100%;
+    height: 0;
 }
