--- a/client/src/css/Header.module.css
+++ b/client/src/css/Header.module.css
@@ -1,12 +1,34 @@
-.header {
-    background: black;
-    display: grid;
+
+.container{
+    color: white;
+    max-width: 100%;
+    
 }
 
 .upper_header {
-    background: green;
+    background: #1F1F1F;
+    
 }
 
 .lower_header {
-    background: rgb(85, 180, 228);
+    display: flex;
+    align-items: center;
+    background: #151515;
+    font-size: 24px;
+    padding: 12px;
 }
+
+.lower_header a{
+    text-decoration: none;
+    color: white;
+}
+
+
+.lower_header_form, .lower_header_form:focus {
+   border-radius: 15px;
+   border: 2px #747474 solid;
+   background: #151515;
+   color:#747474;
+   font-size: 18px;
+}
+
