--- a/client/src/css/HomePage.module.css
+++ b/client/src/css/HomePage.module.css
@@ -11,9 +11,12 @@
     height: 0;
 }
 
+.left_box_wrapper {
+    width: 18em;
+    margin-right: 2em;
+}
 
 .wrapper {
-    width: 266px;
     background: #272727;
     border-radius: 15px;
     border: #14A76C 2px solid;
@@ -22,6 +25,7 @@
     flex-direction: column;
     font-size: 26px;
     padding: 0.7em;
+    margin-bottom: 1.5em;
 }
 
 .wrapper span {
@@ -33,10 +37,11 @@
 }
 
 #ask_button {
-    background: #14A76C;
-    border: #14A76C 2px solid;
-    border-radius: 10px;
-    height: 2em;
     font-size: 20px;
-    color: #000000;
+    margin-top: 1em;
+}
+
+#button_up {
+    width: 8em;
+    margin-top: 2em;
 }
