modified:   client/src/components/Footer/Footer.jsx 	modified:   client/src/components/Header/Header.jsx 	modified:   client/src/components/UsersQuestions/UsersQuestion.jsx 	modified:   client/src/components/UsersQuestions/UsersQuestionList.jsx 	modified:   client/src/css/Footer.module.css 	modified:   client/src/css/Header.module.css 	modified:   client/src/css/UsersQuestion.module.css 	modified:   client/src/pages/Login.jsx

--- a/client/src/css/Header.module.css
+++ b/client/src/css/Header.module.css
@@ -5,7 +5,25 @@
 
 .upper_header {
     background: #1F1F1F;
-    
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding: 0.2em;
+}
+
+
+
+#enter_button {
+    color: #151515;
+}
+
+.upper_header a {
+    margin-right: 1em;
+
+}
+
+.upper_header a:hover {
+    text-decoration: none;
 }
 
 .lower_header {
