--- a/client/src/css/UsersQuestion.module.css
+++ b/client/src/css/UsersQuestion.module.css
@@ -1,10 +1,24 @@
 .wrapper {
-    width: 266px;
-    border-radius: 15px;
+    display: flex;
+    border-bottom: #808080 1px solid;
+}
+
+.wrapper h4 {
+    color: #14A76C;
 }
 
 .ava {
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    margin-right: 1em;
+}
+
+.question_container {
+    display: flex;
+    margin: 1em auto;
+}
+
+.signature {
+    color: #747474;
 }
