--- a/client/src/css/Header.module.css
+++ b/client/src/css/Header.module.css
@@ -5,7 +5,22 @@
 
 .upper_header {
     background: #1F1F1F;
-    
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding: 0.3em;
+}
+
+.upper_header > button > a {
+    font-size: 1.2em;
+}
+
+#enter_button {
+    color: #151515;
+}
+
+.upper_header a:hover {
+    text-decoration: none;
 }
 
 .lower_header {
