--- a/client/src/css/AnswerList.module.css
+++ b/client/src/css/AnswerList.module.css
@@ -8,6 +8,7 @@
     border: #FFE400 2px solid;
     border-radius: 15px;
     color: #FFFFFF;
-    margin-bottom: 40px;
+    padding: 10px;
+    margin: 0px 20px 40px 20px;
 }
 
