--- a/client/src/css/QuestionPage.module.css
+++ b/client/src/css/QuestionPage.module.css
@@ -1,20 +1,21 @@
 .wrapper {
     padding: 37px 0;
     margin: 0 auto;
-    width: 940px;
+    width: 60%;
 }
 
 .users_question_wrapper {
     border: #747474 2px solid;
     border-radius: 15px;
-    padding: 0px 30px 10px;
 }
 
-.textarea {
+.textarea, .textarea:focus {
     background: #1F1F1F;
     resize: none;
     width: 100%;
     border: none;
+    outline: none;
+    color: white;
 }
 
 .textarea_wrapper {
