--- a/client/src/css/Header.module.css
+++ b/client/src/css/Header.module.css
@@ -31,6 +31,20 @@
     text-decoration: none;
 }
 
+#link {
+    text-decoration: none;
+    color: #14a76c;
+}
+
+#link:hover {
+    color: #0f8656;
+    border-bottom: 2px solid #0f8656;
+}
+
+#dropdown_text {
+    color: #14a76c;
+}
+
 
 .lower_header_form, .lower_header_form:focus {
    border-radius: 15px;
