--- a/client/src/css/Auth.module.css
+++ b/client/src/css/Auth.module.css
@@ -5,7 +5,7 @@
 /* 
 .block {
   width: 230px; 
-   box-sizing: border-box;
+  box-sizing: border-box;
   border-radius: 0.8em;
   font-size: 1.5em;
   margin-bottom: 1.2em;
@@ -20,7 +20,7 @@
 .traffic_light {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   margin-right: 2em;
 }
 
@@ -50,10 +50,6 @@
   margin: 0;
 }
 
-#reg_head {
-  font-size: 32px;
-  letter-spacing: 1px;
-}
 
 #text {
   font-size: 20px;
@@ -61,9 +57,9 @@
 
 .input,
 .input:focus {
-  border-radius: 10px;
+  border-radius: 0.5em;
   background: #4b4b4b;
-  width: 20em;
+  /* width: 25em; */
   color: #fff;
 }
 
@@ -137,7 +133,7 @@ text_regr a:hover {
 
 .block {
   width: 7em;
-  border-radius: 15px;
+  border-radius: 0.4em;
   font-size: 2.5em;
   margin-bottom: 0.3em;
   padding: 0.2em;
