--- a/client/src/css/HomePage.module.css
+++ b/client/src/css/HomePage.module.css
@@ -51,6 +51,9 @@
 }
 
 #button_up {
+    position: fixed;
+    right: 0px;
+    bottom: 0px;
+    margin: 0 15px 15px 0;
     width: 8em;
-    margin-top: 2em;
 }
