--- a/client/src/css/UsersQuestionList.module.css
+++ b/client/src/css/UsersQuestionList.module.css
@@ -2,7 +2,7 @@
     border: #FFE400 2px solid;
     border-radius: 15px;
     color: #fff;
-    width: 37em;
+    width: 45%;
     padding: 2em;
 }
 
