--- a/client/src/css/HomePage.module.css
+++ b/client/src/css/HomePage.module.css
@@ -16,6 +16,13 @@
     margin-right: 2em;
 }
 
+@media (max-width: 600px) {
+    .left_box_wrapper {
+        width: 18em;
+        margin-right: 0;
+    }
+  }
+
 .wrapper {
     background: #272727;
     border-radius: 15px;
