--- a/client/src/css/UsersQuestionList.module.css
+++ b/client/src/css/UsersQuestionList.module.css
@@ -18,3 +18,11 @@
     font-size: 1.5em;
     color: #D2D2D2;
 }
+
+
+@media (max-width: 600px) {
+    .list_wrapper {
+        width: 85%;
+        margin-top: 20px;
+    }
+  }
