--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,6 +10,14 @@ a{
   color: white;
 }
 
+.button_up {
+  position: fixed;
+  right: 0px;
+  bottom: 0px;
+  margin: 0 15px 15px 0;
+  width: 8em;
+}
+
 .trigger{
   width:100%;
   height:20px;
