--- a/client/src/css/HomePage.module.css
+++ b/client/src/css/HomePage.module.css
@@ -5,7 +5,9 @@
     justify-content: center;
     margin: 3em auto;
 }
-
+.questionList_wrapper{
+    width: 45%;
+}
 .break {
     flex-basis: 100%;
     height: 0;
@@ -57,10 +59,3 @@
     margin-top: 1em;
 }
 
-#button_up {
-    position: fixed;
-    right: 0px;
-    bottom: 0px;
-    margin: 0 15px 15px 0;
-    width: 8em;
-}
