--- a/client/src/css/Auth.module.css
+++ b/client/src/css/Auth.module.css
@@ -1,21 +1,8 @@
+@media only screen and (min-width: 1024px) {
 .reg_wrapper {
   display: grid;
   justify-content: center;
 }
-/* 
-.block {
-  width: 230px; 
-  box-sizing: border-box;
-  border-radius: 0.8em;
-  font-size: 1.5em;
-  margin-bottom: 1.2em;
-  padding: 1em;
-  line-height: 1em;
-  text-align: center;
-  display: flex;
-  flex-direction: column; 
-   flex-wrap: wrap;
-} */
 
 .traffic_light {
   display: flex;
@@ -83,10 +70,6 @@
   margin-top: 1em;
   /* margin: 1em auto 1em; */
 }
-/* 
-.indent {
-  margin-bottom: 30px;
-} */
 
 .link_left_margin {
   margin-left: 0.7em;
@@ -102,26 +85,6 @@
   color: #0f8656;
   border-bottom: 2px solid #0f8656;
 }
-
-/*
-a:link {
-  text-decoration: none;
-  color: #14a76c;
-}
-/*
-text_regr a {
-  margin-left: 0.3em;
-}
-
-text_regr a:visited {
-  text-decoration: none;
-  color: #0c6541;
-}
-
-text_regr a:hover {
-  border-bottom: #0c6541 1px solid;
-  color: #0c6541;
-} */
 
 /* * Registration Page */
 
@@ -179,4 +142,5 @@ color: #fff;
   color: #fff;
   border: #646464 1px solid;
   border-radius: 0.7em;
+}
 }
