--- a/client/src/css/HomePage.module.css
+++ b/client/src/css/HomePage.module.css
@@ -1,28 +1,22 @@
-.home_page_wrapper {
-    background: #1F1F1F;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 3em auto;
-}
-
-.break {
-    flex-basis: 100%;
-    height: 0;
-}
-
-.left_box_wrapper {
-    width: 18em;
-    margin-right: 2em;
-}
-
-@media (max-width: 600px) {
+@media only screen and (min-width: 1024px) {
+    .home_page_wrapper {
+        background: #1F1F1F;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 3em auto;
+    }
+    
+    .break {
+        flex-basis: 100%;
+        height: 0;
+    }
+    
     .left_box_wrapper {
         width: 18em;
-        margin-right: 0;
+        margin-right: 2em;
     }
-  }
-
+    
 .wrapper {
     background: #272727;
     border-radius: 15px;
@@ -63,4 +57,67 @@
     bottom: 0px;
     margin: 0 15px 15px 0;
     width: 8em;
+}
+}
+
+
+@media only screen and (max-width: 768px) {
+    .home_page_wrapper {
+        background: #1F1F1F;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 3em auto;
+    }
+    
+    .break {
+        flex-basis: 100%;
+        height: 0;
+    }
+    .left_box_wrapper {
+        width: 18em;
+        margin-right: 0;
+    }
+      
+.wrapper {
+    background: #272727;
+    border-radius: 15px;
+    border: #14A76C 2px solid;
+    color: #D2D2D2;
+    display: flex;
+    flex-direction: column;
+    font-size: 26px;
+    padding: 0.7em;
+    margin-bottom: 1.5em;
+}
+
+.wrapper span {
+    margin-bottom: 0.4em;
+}
+
+#green {
+    color: #14A76C;
+}
+
+.ask_text a {
+    color: #14A76C;
+}
+
+.ask_text a:hover {
+    border-bottom: #0c6541 1px solid;
+    color: #0c6541;
+}
+
+#ask_button {
+    font-size: 20px;
+    margin-top: 1em;
+}
+
+#button_up {
+    position: fixed;
+    right: 0px;
+    bottom: 0px;
+    margin: 0 15px 15px 0;
+    width: 3em;
+}
 }
