--- a/client/src/css/UsersQuestion.module.css
+++ b/client/src/css/UsersQuestion.module.css
@@ -1,3 +1,4 @@
+@media only screen and (min-width: 1024px) {
 .wrapper {
     border-bottom: #808080 1px solid;
 }
@@ -21,4 +22,44 @@ p{
 
 .signature {
     color: #747474;
+}
+}
+
+@media only screen and (max-width: 768px) {
+    .wrapper {
+        border-bottom: #808080 1px solid;
+    }
+    
+    .wrapper h4 {
+        color: #14A76C;
+    }
+    
+    .question_container {
+        display: flex;
+        margin: 1em auto;
+    }
+    p{
+        color: #FFFFFF;
+    }
+    
+    .question_title {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .signature_block {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+    .signature {
+        color: #747474;
+        font-size: 1.2em;
+        margin-left: 0.2em;
+    }
+
+    #com_count {
+        margin-left: 90%;
+        display: inline-block;
+    }
 }
