--- a/client/src/css/Answer.module.css
+++ b/client/src/css/Answer.module.css
@@ -1,3 +1,4 @@
+@media only screen and (min-width: 1024px) {
 .ava {
     width: 50px;
     height: 50px;
@@ -8,4 +9,22 @@
     border-bottom: #4B4B4B 1px solid;   
     margin-bottom: 10px;
     color: #FFFFFF; 
+}
+
+.quest_title {
+    display: flex;
+    justify-content: space-between;
+}
+
+.signature {
+    display: flex;
+    justify-content: space-between;
+}
+}
+
+@media only screen and (max-width: 768px) {
+    .quest_title {
+        display: flex;
+        justify-content: space-between;
+    }
 }
