--- a/client/src/css/AnswerList.module.css
+++ b/client/src/css/AnswerList.module.css
@@ -1,8 +1,19 @@
+@media only screen and (min-width: 1024px) {
 .best_answer_block_wrapper {
     border: #FFE400 2px solid;
     border-radius: 15px;
     color: #FFFFFF;
     padding: 10px;
-    margin: 15px 20px 40px 20px;
+    margin: 1em auto;
+}
 }
 
+@media only screen and (max-width: 768px) {
+    .best_answer_block_wrapper {
+        border: #FFE400 2px solid;
+        border-radius: 0.6em;
+        color: #FFFFFF;
+        padding: 10px;
+        margin: 1em auto;
+    }
+}
