--- a/client/src/css/HomePage.module.css
+++ b/client/src/css/HomePage.module.css
@@ -1,17 +1,4 @@
 @media only screen and (min-width: 1024px) {
-    .home_page_wrapper {
-        background: #1F1F1F;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        margin: 3em auto;
-    }
-    
-    .break {
-        flex-basis: 100%;
-        height: 0;
-    }
-
 .home_page_wrapper {
     background: #1F1F1F;
     display: flex;
@@ -19,6 +6,24 @@
     justify-content: center;
     margin: 3em auto;
 }
+
+.wrapper {
+    background: #272727;
+    border-radius: 15px;
+    border: #14A76C 2px solid;
+    color: #D2D2D2;
+    display: flex;
+    flex-direction: column;
+    font-size: 26px;
+    padding: 0.7em;
+    margin-bottom: 1.5em;
+}
+
+.break {
+    flex-basis: 100%;
+    height: 0;
+}
+
 .questionList_wrapper{
     width: 45%;
 }
@@ -33,11 +38,11 @@
 }
 }
 
-@media (max-width: 600px) {
-    .left_box_wrapper {
-        width: 18em;
-        margin-right: 2em;
-    }
+@media only screen and (max-width: 768px) {
+.left_box_wrapper {
+    width: 18em;
+    margin-right: 2em;
+}
     
 .wrapper {
     background: #272727;
