--- a/client/src/css/UsersQuestionList.module.css
+++ b/client/src/css/UsersQuestionList.module.css
@@ -23,23 +23,23 @@
 }
 
 @media only screen and (max-width: 768px) {
-
-/* 
-@media (max-width: 600px) {
->>>>>>> e67c0a92cc63921f90a939a7d65371f03302724e
     .list_wrapper {
         width: 85%;
-        margin-top: 20px;
+        margin: 1em auto ;
         border: #FFE400 2px solid;
         border-radius: 0.8em;
         padding: 0.7em;
     }
-
     
     #title {
-        font-size: 28px;
+        font-size: 1.8em;
         color: #D2D2D2;
         display: inline-block;
+        margin-bottom: 1em;
+    }
+
+    .items_container {
+        border-bottom: 1px solid grey; 
         margin-bottom: 1em;
     }
 
@@ -48,5 +48,5 @@
         font-size: 1.5em;
         color: #D2D2D2;
     }
-} */
 } 
+
