--- a/client/src/css/Auth.module.css
+++ b/client/src/css/Auth.module.css
@@ -144,3 +144,80 @@ color: #fff;
   border-radius: 0.7em;
 }
 }
+
+@media only screen and (max-width: 768px) {
+.reg_wrapper {
+  display: grid;
+  justify-content: center;
+}
+
+.traffic_light {
+  display: none;
+}
+
+
+#reg_head {
+  font-size: 2em;
+  letter-spacing: 1px;
+}
+
+.reg_form {
+  width: 100vw;
+  border: #4B4B4B 2px solid;
+  border-radius: 1em;
+  color: #fff;
+  display: grid;
+  justify-items: center;
+  padding: 1em;
+  margin: 1em auto;
+}
+
+#text {
+  font-size: 20px;
+}
+
+.input,
+.input:focus {
+  border-radius: 0.5em;
+  background: #4b4b4b;
+  width: 20em;
+  color: #fff;
+}
+
+#checkbox {
+  width: 21px;
+  height: 21px;
+  vertical-align: middle;
+}
+
+#check_text {
+  font-size: 1em;
+  vertical-align: middle;
+}
+
+#reg_button {
+  width: 13em;
+  height: 1.7em;
+  padding: 0;
+  font-size: 1.3em;
+  color: #fff;
+  border-radius: 0.8em;
+  border: #646464 1px solid;
+  margin-top: 1em;
+}
+
+.link_left_margin {
+  margin-left: 0.7em;
+}
+
+#link {
+  text-decoration: none;
+  color: #14a76c;
+  margin-left: 0.7em;
+}
+
+#link:hover {
+  color: #0f8656;
+  border-bottom: 2px solid #0f8656;
+}
+}
